Fix color contrast

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ h2.title {
 }
 
 #introduction h2 {
-  color: #36b37f;
+  color: #28865f;
 }
 
 .my-profession {
@@ -190,7 +190,7 @@ h2.title {
 }
 
 .see-project-button {
-  background: #36b37f;
+  background: #28865f;
   border-radius: 4px;
   display: flex;
   flex-direction: row;
@@ -200,7 +200,7 @@ h2.title {
   color: #fff;
   font-family: 'Inter', sans-serif;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   font-size: 17px;
   line-height: 24px;
   border: none;
@@ -321,11 +321,11 @@ h2.title {
   border-radius: 8px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.03em;
-  color: #36b37e;
+  color: #28865f;
 }
 
 .contact-me-section {
